[Beta] Перенос оружия с прошлой версии

--- a/OpenCase_Beta/RUS/settings.html
+++ b/OpenCase_Beta/RUS/settings.html
@@ -401,12 +401,13 @@ $('#reset').on('click', function () {
 			if (type == 'yes') {
 				if (isAndroid()) {
 					client.deleteAllInventory();
-					deleteAllCookies();
 				} else {
 					localStorage.clear();
                     window.indexedDB.deleteDatabase('Inventory');
-					deleteAllCookies();
 				}
+                deleteAllCookies();
+                saveStatistic('doubleBalance', 0);
+                saveStatistic('playerPoints', 0);
 				Lobibox.notify('info', {
 					pauseDelayOnHover : false,
 					continueDelayOnInactiveTab : false,
