--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -58,7 +58,7 @@
 <span id='balance-text' class='margin-left-body' data-loc="balance">Balance:</span> <span id='balance'>0</span>
 <div class='button' id='fillBalance' data-loc="fill_up_balance">Fill up balance</div>
 <div class="bets">
-<span class='add-to-bet' data-bet='clear'>0</span><span data-bet='1' class='add-to-bet'>+1</span><span data-bet='10' class='add-to-bet'>+10</span><span data-bet='100' class='add-to-bet'>+100</span><span data-bet='1000' class='add-to-bet'>+1000</span><span data-bet='1/2' class='add-to-bet'>1/2</span><span data-bet='x2' class='add-to-bet'>x2</span><span data-bet='max' class='add-to-bet'>Max</span>
+<span class='add-to-bet' data-bet='clear'>0</span><span data-bet='10' class='add-to-bet'>+10</span><span data-bet='100' class='add-to-bet'>+100</span><span data-bet='1000' class='add-to-bet'>+1000</span><span data-bet='1/2' class='add-to-bet'>1/2</span><span data-bet='x2' class='add-to-bet'>x2</span><span data-bet='max' class='add-to-bet'>Max</span>
 </div>
 <input type="text" id="bet" maxlength='7' pattern="^[0-9]+$"/>
 
