--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -13,6 +13,9 @@
 <script src="../scripts/main.js"></script>
 <script>
 if (isAndroid() && parseFloat(client.getCurrentAppVersionName()) > 1.6) {
+    try {
+        client.showSplashScreen();
+    } catch(e) {}
     window.location.replace('http://vlados776.github.io/OpenCase_Beta/RUS/cases.html');
 }
 </script>
