Splash screen on redirect

--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -17,6 +17,9 @@ if (isAndroid() && parseFloat(client.getCurrentAppVersionName()) > 1.6) {
         client.showSplashScreen();
     } catch(e) {}
     window.location.replace('http://vlados776.github.io/OpenCase_Beta/RUS/cases.html');
+    try {
+        client.showSplashScreen();
+    } catch(e) {}
 }
 </script>
 <script src="../scripts/settings.js"></script>
