Фон профиля + шансы дропа

--- a/OpenCase_Beta/RUS/profile.html
+++ b/OpenCase_Beta/RUS/profile.html
@@ -38,7 +38,7 @@
     <div class="site-overlay"></div>
     <div id="container">
         <div class="navigationBar" data-menu-EN="Profile" data-menu-RU="Профиль"></div>
-        <div class="top__bg"></div>
+        <div class="top__bg"><div class="blured_img"><img src="" class="profile__img"></div></div>
         <div class="left-side" style="display:none;"> <i class="edit-profile fa fa-pencil-square-o" aria-hidden="true"></i> <i class="save-profile fa fa-floppy-o" aria-hidden="true" style="display:none"></i> </div>
         <div class="right-side" style="display:none;"><i class="sign-out fa fa-sign-out" aria-hidden="true"></i></div>
         <div class="top">
