--- a/OpenCase_Beta/RUS/profile.html
+++ b/OpenCase_Beta/RUS/profile.html
@@ -83,6 +83,7 @@
             <ul class="posts__user-posts"> </ul>
         </div>
         
+        <span class="user_uid"></span>
         
         <div class='trade-window' style='display: none;' data-loc-group="exchange">
             <div class='trade__header'>
