--- a/OpenCase_Beta/RUS/market.html
+++ b/OpenCase_Beta/RUS/market.html
@@ -40,7 +40,7 @@
 <div id="container">
 <div class="navigationBar" data-menu-EN="Market" data-menu-RU="Магазин"></div>
 	<div id="search">
-		<input type="text" name="search_text" id="search_text" placeholder="Search"/>
+		<input type="text" name="search_text" class="input-text" id="search_text" placeholder="Search"/>
 		<span type="button" name="search_button" id="search_button">
 		<i class="fa fa-search" aria-hidden="true"></i>
 		</span>
@@ -62,7 +62,7 @@
 		<tr><td data-loc="quality">Quality</td><td id="weaponQuality"></td></tr>
 		</table>
 		<span id='buy-text' data-loc="buy">Buy:</span>
-		<button class="countChange" id="minus">-</button><input type="text" id="buy_count" placeholder="1"></input><button class="countChange" id="plus">+</button><br>
+		<button class="countChange" id="minus">-</button><input type="text" id="buy_count" placeholder="1" class='input-text'></input><button class="countChange" id="plus">+</button><br>
 		<button class="button_black with_icon double_icon" id="buy-double"></button>
 		<span id='weaponRarity' style='display:none;'></span>
 	</div>
