--- a/OpenCase_Beta/RUS/chat.html
+++ b/OpenCase_Beta/RUS/chat.html
@@ -39,9 +39,9 @@
     <div class='container' id="container">
         <div class="navigationBar" data-menu-EN="Chat" data-menu-RU="Чат"></div>
         <div id="login" style='display: none;' data-loc-group="login">
-            <input type="text" placeholder="Email" id="email"></input>
-            <input type="password" placeholder="Password" id="password"></input>
-            <input type="text" placeholder="Nickname" id="nickname" class="hide"></input>
+            <input type="text" class="input-text" placeholder="Email" id="email"></input>
+            <input type="password" class="input-text" placeholder="Password" id="password"></input>
+            <input type="text" placeholder="Nickname" id="nickname" class="input-text" style='display: none;'></input>
             <span id="login-status"></span>
             <div id="login__buttons">
                 <div id='login-buttons-container'><button class="button_blue" onclick="fbProfile.login();" id="loginButton" data-loc="sign_in">Sign in</button>
