--- a/OpenCase_Beta/RUS/settings.html
+++ b/OpenCase_Beta/RUS/settings.html
@@ -225,7 +225,7 @@ div#avatar {
 <div class='option-block' data-loc-group="profile">
 	<span class='option-block__name' data-loc="group_title">Profile</span>
 	<div class='option'><span data-loc="nick">Your name</span>
-		<input type="text" id="nickname" size="20" />
+		<input type="text" id="nickname" class="input-text" size="20" />
 	</div>
 	<div class='option'><span data-loc="avatar">Avatar</span>
 		<div id="avatar">
@@ -335,7 +335,7 @@ $(function() {
                     } else {
                         $('input[name="trades"]').prop('checked', false);
                     }
-                } catch(e) {}     
+                } catch(e) {}
             })
         }
     })
@@ -461,6 +461,12 @@ $(document).on('click', '#code-confirm', function() {
         code: '',
         multiply: true,
         action: 'location="http://192.168.1.205:8080"',
+        description: 'Go to local web server.'
+    }, {
+        simpleCode: 'Splash',
+        code: '',
+        multiply: true,
+        action: 'client.showSplashScreen();',
         description: 'Go to local web server.'
     }, {
         simpleCode: 'Beta',
