--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -107,7 +107,7 @@
 </div>
 
         <!-- === Chat === -->
-        <div class='footer navbar-fixed-bottom' data-loc-group='chat'>
+        <div class='footer navbar-fixed-bottom chat-bar' data-loc-group='chat'>
             <div class='col-md-4 col-sm-5 col-lg-4'>
                 <div class='panel panel-primary chat-panel'>
                     <div class='panel-heading' id='chat' role='tab' style='cursor: pointer;' data-toggle='collapse' data-parent='#accordion' href='#chatCollapse' aria-expanded='true' aria-controls='chatCollapse'>
