--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -138,7 +138,7 @@
 	<span id="intentory-Player"></span>
 	<div class="closeInventory"></div>
 	<ul class="inventory inv-price-counter"></ul>
-	<button class="choseItems">Обменять</button>
+	<button class="choseItems btn btn-success btn-block">Обменять</button>
 </div>
 
 </div>
