--- a/OpenCase_Beta/RUS/double.html
+++ b/OpenCase_Beta/RUS/double.html
@@ -110,7 +110,7 @@
 	<span id="intentory-Player"></span>
 	<div class="closeInventory"></div>
 	<ul class="inventory inv-price-counter"></ul>
-	<button class="choseItems" data-loc="choose_items">Sell</button>
+	<button class="choseItems btn btn-success btn-block" data-loc="choose_items">Sell</button>
 </div>
 
 </div>
