--- a/OpenCase_Beta/RUS/market.html
+++ b/OpenCase_Beta/RUS/market.html
@@ -4,8 +4,8 @@
 <title>Магазин</title>
     <meta charset="utf-8">
 <!-- Стили -->
+<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
-<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/inventory.css">
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
@@ -39,14 +39,17 @@
 	<div class="site-overlay"></div>
 <div id="container">
 <div class="navigationBar" data-menu-EN="Market" data-menu-RU="Магазин"></div>
-	<div id="search">
-		<input type="text" name="search_text" class="input-text" id="search_text" placeholder="Search"/>
-		<span type="button" name="search_button" id="search_button">
-		<i class="fa fa-search" aria-hidden="true"></i>
-		</span>
-	</div>
+    <div class='input-group' id="search">
+        <input type="text" name="search_text" class="form-control" id="search_text" placeholder="Search"/>
+        <div class='input-group-btn'>
+            <button class='btn btn-default' type="button" name="search_button" id="search_button">
+              <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
+            </button>
+        </div>
+        </span>
+    </div>
 
-	<table id="search_result"></table>
+	<table id="search_result" class='search-result-table'></table>
 	<div class="sales">
 	</div>
 
@@ -62,8 +65,14 @@
 		<tr><td data-loc="quality">Quality</td><td id="weaponQuality"></td></tr>
 		</table>
 		<span id='buy-text' data-loc="buy">Buy:</span>
-		<button class="countChange" id="minus">-</button><input type="text" id="buy_count" placeholder="1" class='input-text'></input><button class="countChange" id="plus">+</button><br>
-		<button class="button_black with_icon double_icon" id="buy-double"></button>
+        <span class='cant-buy text-danger' data-loc='not_for_sale'>This weapon is not for sale</span>
+        <div id='buy-count-block'>
+		  <button class="btn btn-primary btn-sm" id="minus">-</button><input type="text" id="buy_count" placeholder="1" class='form-control input-sm'></input><button class="btn btn-primary btn-sm" id="plus">+</button>
+        </div>
+		<button class="btn btn-success" id="buy-double" style='margin: 10px 0;'>
+            <span></span>
+            <i class='double-icon'></i>
+        </button>
 		<span id='weaponRarity' style='display:none;'></span>
 	</div>
 </div>
