--- a/OpenCase_Beta/RUS/market.html
+++ b/OpenCase_Beta/RUS/market.html
@@ -65,7 +65,7 @@
 		<tr><td data-loc="quality">Quality</td><td id="weaponQuality"></td></tr>
 		</table>
 		<span id='buy-text' data-loc="buy">Buy:</span>
-        <span class='cant-buy text-danger' data-loc='not_for_sale'>This weapon is not for sale</span>
+        <span class='cant-buy text-danger' data-loc='not_for_sale'>This item is not for sale</span>
         <div id='buy-count-block'>
 		  <button class="btn btn-primary btn-sm" id="minus">-</button><input type="text" id="buy_count" placeholder="1" class='form-control input-sm'></input><button class="btn btn-primary btn-sm" id="plus">+</button>
         </div>
