Polski beta test

--- a/OpenCase_Beta/RUS/settings.html
+++ b/OpenCase_Beta/RUS/settings.html
@@ -469,11 +469,11 @@ $(document).on('click', '#code-confirm', function() {
         action: 'client.showSplashScreen();',
         description: 'Go to local web server.'
     }, {
-        simpleCode: 'Beta',
+        simpleCode: 'Polski',
         code: '',
         multiply: true,
-        action: 'location="https://vlados776.github.io/OpenCase_Beta/RUS/cases.html"',
-        description: 'Redirect to beta server.'
+        action: 'saveStatistic("settings_language", "PL");',
+        description: 'Language changed to Polski.'
     }];
 	var code = $('#code-input').val();
 
