--- a/OpenCase_Beta/RUS/Dice.html
+++ b/OpenCase_Beta/RUS/Dice.html
@@ -2,6 +2,7 @@
 <head>
 <title>Dice</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
 <!-- Стили -->
 <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
