--- a/OpenCase_Beta/RUS/apps.html
+++ b/OpenCase_Beta/RUS/apps.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Другие приложения</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
 		<script src="../scripts/jquery.min.js"></script>
 		<script src="../scripts/jquery.cookie.js"></script>
 		<script src="../scripts/main.js"></script>
