--- a/OpenCase_Beta/RUS/banlist.html
+++ b/OpenCase_Beta/RUS/banlist.html
@@ -4,6 +4,7 @@
 <head>
     <title>Бан-лист</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="../css/fonts.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/animate.css">
