--- a/OpenCase_Beta/RUS/open.html
+++ b/OpenCase_Beta/RUS/open.html
@@ -4,6 +4,7 @@
 <head>
     <title>Открытие кейса</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
     <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/main.js"></script>
     <script src="../scripts/settings.js"></script>
