--- a/OpenCase_Beta/RUS/spinking.html
+++ b/OpenCase_Beta/RUS/spinking.html
@@ -4,6 +4,7 @@
 <title>SpinKing</title>
 <!-- Стили -->
 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
