Update text fix

--- a/OpenCase_Beta/RUS/cases.html
+++ b/OpenCase_Beta/RUS/cases.html
@@ -124,10 +124,12 @@ $(function () {
     
 	if (isAndroid()) {
         var version = client.getCurrentAppVersionName();
-
-		if (parseFloat(version) < 1.9) {
-			$('body').append('<div class="new-version"><b>' + Localization.getString('other.new_version.new_version') + '</b><span class="new-version__button" id="new-version__later">' + Localization.getString('other.new_version.later') + '</span><span class="new-version__button" id="new-version__update">' + Localization.getString('other.new_version.update') + '</span></div>');
-		}
+        
+        $(document).on('localizationloaded', function() {
+            if (parseFloat(version) < 1.9) {
+                $('body').append('<div class="new-version"><b>' + Localization.getString('other.new_version.new_version', 'New version of the app is available.') + '</b><span class="new-version__button" id="new-version__later">' + Localization.getString('other.new_version.later', 'Later') + '</span><span class="new-version__button" id="new-version__update">' + Localization.getString('other.new_version.update','Update') + '</span></div>');
+            }
+        })
 	}
 
     $(document).on('localizationloaded', function() {
