--- a/OpenCase_Beta/RUS/cases.html
+++ b/OpenCase_Beta/RUS/cases.html
@@ -2,6 +2,7 @@
 <html><head>
 <title>Список кейсов</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
@@ -51,7 +52,7 @@
 </div>
     <div class='news well well-sm'>
         <span data-loc='news'>
-            Vote for the next mini game <a href='https://www.patreon.com/posts/next-game-7877075' target="_blank">HERE</a>
+            Next game will be... <a href='https://www.patreon.com/posts/7929781' target="_blank">screenshot</a>
         </span>
     </div>
     <div class="cases">
