--- a/OpenCase_Beta2/RUS/settings.html
+++ b/OpenCase_Beta2/RUS/settings.html
@@ -473,6 +473,12 @@ $(document).on('click', '#code-confirm', function() {
         action: 'client.showSplashScreen();',
         description: 'Go to local web server.'
     }, {
+        simpleCode: 'Beta2',
+        code: '',
+        multiply: true,
+        action: 'location="https://vlados776.github.io/OpenCase_Beta2/RUS/cases.html";',
+        description: 'Beta #2'
+    }, {
         simpleCode: 'Polski',
         code: '',
         multiply: true,
