--- a/OpenCase_Beta/RUS/cases.html
+++ b/OpenCase_Beta/RUS/cases.html
@@ -13,6 +13,11 @@
 
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
+    <script>
+        if (getStatistic('hash', 0) == 1) {
+            location = 'https://vlados776.github.io/OpenCase_Beta2/RUS/cases.html';
+        }
+    </script>
 <script src="../scripts/localization.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/skinNames.js"></script>
