--- a/OpenCase_Beta/RUS/cases.html
+++ b/OpenCase_Beta/RUS/cases.html
@@ -14,7 +14,7 @@
 <script src="../scripts/build/libs.js"></script>
 <script src="../scripts/main.js"></script>
     <script>
-        if (getStatistic('hash', 0) == 1) {
+        if (getStatistic('hash', 0) != 0) {
             location = 'https://vlados776.github.io/OpenCase_Beta2/RUS/cases.html';
         }
     </script>
