--- a/OpenCase_Beta2/RUS/chat.html
+++ b/OpenCase_Beta2/RUS/chat.html
@@ -97,7 +97,7 @@
                 $('attach_img').click();
             })
             $('#attach_img').unsigned_cloudinary_upload('chat_images', 
-                { cloud_name: 'dhf3u3m2h' }, 
+                { cloud_name: 'dxcleuhqp' }, //dhf3u3m2h
                 { multiply: true })
                 .bind('cloudinarydone', function(e, data) {
                     $('#chat__new-message').append(data.result.secure_url);
