--- a/OpenCase_Beta2/RUS/about.html
+++ b/OpenCase_Beta2/RUS/about.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
-    <script src="../scripts/jquery.min.js"></script>
-    <script src="../scripts/jquery.cookie.js"></script>
-    <script src="../scripts/test.js"></script>
+    <script src="../scripts/build/libs.js"></script>
     <script src="../scripts/weapons.js"></script>
     <script src="../scripts/skinNames.js"></script>
     <script src="../scripts/main.js"></script>
