--- a/OpenCase_Beta2/RUS/apps.html
+++ b/OpenCase_Beta2/RUS/apps.html
@@ -2,8 +2,7 @@
 	<head>
 		<title>Другие приложения</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.9, maximum-scale=1.0, user-scalable=no">
-		<script src="../scripts/jquery.min.js"></script>
-		<script src="../scripts/jquery.cookie.js"></script>
+		<script src="../scripts/build/libs.js"></script>
 		<script src="../scripts/main.js"></script>
 		<script src="../scripts/settings.js"></script>
 		<script src="../../android/apps.js"></script>
