--- a/OpenCase_Beta2/RUS/faq.html
+++ b/OpenCase_Beta2/RUS/faq.html
@@ -8,8 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
         <link rel="stylesheet" type="text/css" href="../css/winter.css">
         
-		<script src="../scripts/jquery.min.js"></script>
-		<script src="../scripts/jquery.cookie.js"></script>
+		<script src="../scripts/build/libs.js"></script>
 		<script src="../scripts/main.js"></script>
 		<script src="../scripts/settings.js"></script>
 		<script src="../scripts/cases2.js"></script>
