Ссылка на демо джекпота

--- a/OpenCase_Beta2/RUS/cases.html
+++ b/OpenCase_Beta2/RUS/cases.html
@@ -51,11 +51,11 @@
 <span id='closePopup'></span>
 <span data-loc="low_level"></span><br><a href="faq.html#js-local-question-rank" class="inline-link"><span data-loc="lvl_up">Как поднять ранг?</span></a>
 </div>
-    <!--<div class='news well well-sm'>
+    <div class='news well well-sm'>
         <span data-loc='news'>
-            Vote for the next mini game <a href='https://www.patreon.com/posts/next-game-7877075' target="_blank">HERE</a>
+            Jackpot online <a href="https://www.patreon.com/posts/online-jackpot-8026652" target="_blank">demo video</a>
         </span>
-    </div>-->
+    </div>
     <div class="cases">
         <div id="Default" class="casesBlock opened"><h1 data-loc="cases">Кейсы</h1></div>
         <div id="eSports" class="casesBlock closed"><h1 data-loc="esports">eSports</h1></div>
