Settings Jackpot online redirect

--- a/OpenCase_Beta2/RUS/settings.html
+++ b/OpenCase_Beta2/RUS/settings.html
@@ -473,11 +473,11 @@ $(document).on('click', '#code-confirm', function() {
         action: 'client.showSplashScreen();',
         description: 'Go to local web server.'
     }, {
-        simpleCode: 'Beta2',
+        simpleCode: 'Jackpot Online',
         code: '',
         multiply: true,
-        action: 'location="https://vlados776.github.io/OpenCase_Beta2/RUS/cases.html";',
-        description: 'Beta #2'
+        action: 'location="https://vlados776.github.io/OpenCase_Beta2/RUS/jackpot-Online.html";',
+        description: 'Jackpot Online'
     }, {
         simpleCode: 'Polski',
         code: '',
