Jackpot padding-bottom

--- a/OpenCase_Beta2/RUS/jackpot-Online.html
+++ b/OpenCase_Beta2/RUS/jackpot-Online.html
@@ -54,6 +54,9 @@
         color: #fff;
         font-size: 17px;
     }
+    #container {
+        padding-bottom: 40px;
+    }
 </style>
 </head>
 <body data-localization="jackpot" data-inventory='no-load'>
